--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie_api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -19,6 +19,12 @@
   },
   "homepage": "https://github.com/Alex-Offner/movie_api#readme",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.21",
+    "save": "^2.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.25.0"
   }
 }
